welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: value nums is not a member of Int
		if(nums(i=a) nums(i+1)==(a+5) && nums(i+2)==(a-1)){
                             ^