welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var a=0;
	for(i<-0 to nums.length-3){
		if(nums(i=a) nums(i+1)==(a+5) && nums(i+2)==(a-1)){
			return true
		}
	}
	return false
}
